--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>User Registration and Authentication</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <base href="/">
   </head>
   <body>
     <div id="root"></div>
