fixes eslint errors

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>User Registration and Authentication</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <base href="/">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
